--- a/style.css
+++ b/style.css
@@ -2193,7 +2193,11 @@ body.dark #theme-toggle-btn:before {
   background: #fff;
 }
 
-.slick-featured-wrap-outer {
+.slick-featured-item:first-child {
+  display: block;
+}
+
+.slick-featured-item:not(:first-child ) {
   display: none;
 }
 .slick-featured-wrap {
@@ -4274,7 +4278,6 @@ li #reply-title {
   visibility: hidden;
 }
 .slick-slide {
-  display: none;
   float: left;
   height: 100%;
   min-height: 1px;
@@ -4284,9 +4287,6 @@ li #reply-title {
 }
 .slick-slide img {
   display: block;
-}
-.slick-slide.slick-loading img {
-  display: none;
 }
 .slick-slide.dragging img {
   pointer-events: none;
