--- a/dark.css
+++ b/dark.css
@@ -39,26 +39,26 @@ body:where(.dark) a,
 body:where(.dark) a:hover,
 body:where(.dark) .entry a:hover,
 body:where(.dark) .site-title a,
-body:where(.dark) .page-title h1, 
-body:where(.dark) .page-title h2, 
-body:where(.dark) .page-title h3, 
+body:where(.dark) .page-title h1,
+body:where(.dark) .page-title h2,
+body:where(.dark) .page-title h3,
 body:where(.dark) .page-title h4,
 body:where(.dark) .blog-card-title a,
 body:where(.dark) .s2 .social-links .social-tooltip:hover,
-body:where(.dark) .alx-tab .tab-item-title a, 
-body:where(.dark) .alx-tab .tab-item-comment a, 
+body:where(.dark) .alx-tab .tab-item-title a,
+body:where(.dark) .alx-tab .tab-item-comment a,
 body:where(.dark) .alx-posts .post-item-title a,
-body:where(.dark) .wp-pagenavi a:hover, 
-body:where(.dark) .wp-pagenavi a:active, 
+body:where(.dark) .wp-pagenavi a:hover,
+body:where(.dark) .wp-pagenavi a:active,
 body:where(.dark) .wp-pagenavi span.current,
 body:where(.dark) #footer-bottom a:hover,
 body:where(.dark) .sidebar .post-nav li a span,
 body:where(.dark) .author-bio .bio-name,
-body:where(.dark) h1, 
-body:where(.dark) h2, 
-body:where(.dark) h3, 
-body:where(.dark) h4, 
-body:where(.dark) h5, 
+body:where(.dark) h1,
+body:where(.dark) h2,
+body:where(.dark) h3,
+body:where(.dark) h4,
+body:where(.dark) h5,
 body:where(.dark) h6,
 body:where(.dark) .widget a,
 body:where(.dark) .widget_rss ul li a,
@@ -67,7 +67,7 @@ body:where(.dark) .themeform label { color: #fff; }
 
 body:where(.dark) .site-description,
 body:where(.dark) .notebox,
-body:where(.dark) #footer-bottom #copyright, 
+body:where(.dark) #footer-bottom #copyright,
 body:where(.dark) #footer-bottom #credit,
 body:where(.dark) .sidebar .widget > h3 > span,
 body:where(.dark) .page-title span,
@@ -78,16 +78,16 @@ body:where(.dark) .post-nav li a strong,
 body:where(.dark) .post-nav li a:hover i,
 body:where(.dark) .author-bio .bio-desc,
 body:where(.dark) .post-tags span,
-body:where(.dark) .widget_archive ul li, 
-body:where(.dark) .widget_categories ul li, 
+body:where(.dark) .widget_archive ul li,
+body:where(.dark) .widget_categories ul li,
 body:where(.dark) .widget_links ul li,
-body:where(.dark) .widget > ul li:before, 
-body:where(.dark) .widget > ul li a::before, 
-body:where(.dark) .widget > div > ul li a:before, 
+body:where(.dark) .widget > ul li:before,
+body:where(.dark) .widget > ul li a::before,
+body:where(.dark) .widget > div > ul li a:before,
 body:where(.dark) .widget_calendar caption:before,
 body:where(.dark) .widget_rss ul li span.rss-date,
 body:where(.dark) .commentlist .comment-body p,
-body:where(.dark) .commentlist .comment-meta a, 
+body:where(.dark) .commentlist .comment-meta a,
 body:where(.dark) .pinglist .ping-meta,
 body:where(.dark) .widget > h3 span { color: rgba(255,255,255,0.5); }
 
@@ -100,7 +100,7 @@ body:where(.dark) #footer-bottom .social-links a { color: rgba(255,255,255,0.7);
 body:where(.dark) #footer-bottom .social-links a:hover { color: rgba(255,255,255,0.8); }
 body:where(.dark) #footer-bottom .social-links .social-tooltip:hover:after { background: #3f3f4d; }
 body:where(.dark) #footer-bottom .social-links .social-tooltip:hover:before { border-color: #3f3f4d transparent; }
- 
+
 body:where(.dark) .s2 .social-links li:before { background: rgba(255,255,255,0.08); }
 body:where(.dark) .s2 .social-links .social-tooltip:hover:after { color: #141416; background: #fff;  }
 body:where(.dark) .s2 .social-links .social-tooltip:hover:before { border-color: transparent #fff; }
@@ -110,23 +110,24 @@ body:where(.dark) .blog-card-category a,
 body:where(.dark) .blog-card-author img,
 body:where(.dark) .blog-single-category a,
 body:where(.dark) .blog-single-author img { background: #141416; }
-body:where(.dark) .wp-pagenavi a:hover, 
-body:where(.dark) .wp-pagenavi a:active, 
+body:where(.dark) .wp-pagenavi a:hover,
+body:where(.dark) .wp-pagenavi a:active,
 body:where(.dark) .wp-pagenavi span.current { background: #3f3f4d; }
 
 body:where(.dark) .blog-card-author img,
 body:where(.dark) .blog-single-author img { border-color: #3f3f4d; }
-body:where(.dark) .blog-card-author a:focus img, 
+body:where(.dark) .blog-card-author a:focus img,
 body:where(.dark) .blog-single-author a:focus img { border-color: #212226; }
 
 body:where(.dark) .blog-card-meta,
+body:where(.dark) .post-item-date,
 body:where(.dark) .blog-card-excerpt,
 body:where(.dark) .alx-tabs-nav li a,
-body:where(.dark) .alx-tab .tab-item-category, 
+body:where(.dark) .alx-tab .tab-item-category,
 body:where(.dark) .alx-posts .post-item-category,
 body:where(.dark) .wp-pagenavi a { color: rgba(255,255,255,0.5); }
 body:where(.dark) .wp-pagenavi span { color: rgba(255,255,255,0.3); }
-body:where(.dark) .alx-tab .tab-item-category a:hover, 
+body:where(.dark) .alx-tab .tab-item-category a:hover,
 body:where(.dark) .alx-posts .post-item-category a:hover { color: #fff!important; }
 
 body:where(.dark) #footer-bottom #back-to-top { color: #fff; border-color: rgba(255,255,255,0.06); }
@@ -150,7 +151,7 @@ body:where(.dark) .blog-card-comments { color: #212226; text-shadow: none; }
 body:where(.dark) .blog-card-comments:hover { color: #3f3f4d; }
 
 body:where(.dark) .widget_calendar thead { background: rgba(255,255,255,0.06); box-shadow: none; }
-body:where(.dark) .widget_calendar th, 
+body:where(.dark) .widget_calendar th,
 body:where(.dark) .widget_calendar td { border-color: rgba(255,255,255,0.06); }
 body:where(.dark) .widget_calendar a:hover { color: rgba(255,255,255,0.5)!important; }
 
@@ -159,7 +160,7 @@ body:where(.dark) .comment-tabs li span { background: rgba(255,255,255,0.1); }
 body:where(.dark) .comment-tabs li a:hover,
 body:where(.dark) .comment-tabs li.active a { background: #212226; color: #fff; border-color: transparent; }
 
-body:where(.dark) .commentlist .fn, 
+body:where(.dark) .commentlist .fn,
 body:where(.dark) .pinglist .ping-link { color: #fff; }
 
 body:where(.dark) #commentform { background: #212226; }
@@ -175,8 +176,8 @@ body:where(.dark) #footer,
 body:where(.dark) #commentform,
 body:where(.dark) .alx-tabs-nav,
 body:where(.dark) .wp-pagenavi a,
-body:where(.dark) .wp-pagenavi a:hover, 
-body:where(.dark) .wp-pagenavi a:active, 
+body:where(.dark) .wp-pagenavi a:hover,
+body:where(.dark) .wp-pagenavi a:active,
 body:where(.dark) .wp-pagenavi span.current,
 body:where(.dark) .search-expand,
 body:where(.dark) .author-bio,
@@ -197,21 +198,21 @@ body:where(.dark) #footer-ads { border-bottom-color: rgba(255,255,255,0.06); }
 }
 
 body:where(.dark) .themeform input[type="search"],
-body:where(.dark) .themeform input[type="text"], 
-body:where(.dark) .themeform input[type="password"], 
-body:where(.dark) .themeform input[type="email"], 
+body:where(.dark) .themeform input[type="text"],
+body:where(.dark) .themeform input[type="password"],
+body:where(.dark) .themeform input[type="email"],
 body:where(.dark) .themeform input[type="url"],
 body:where(.dark) .themeform input[type="tel"],
 body:where(.dark) .themeform input[type="number"],
 body:where(.dark) .themeform select,
 body:where(.dark) .themeform textarea { background: #141416; border: 1px solid rgba(255,255,255,0.15); }
 body:where(.dark) .themeform input[type="search"]:focus,
-body:where(.dark) .themeform input[type="text"]:focus, 
-body:where(.dark) .themeform input[type="password"]:focus, 
-body:where(.dark) .themeform input[type="email"]:focus, 
+body:where(.dark) .themeform input[type="text"]:focus,
+body:where(.dark) .themeform input[type="password"]:focus,
+body:where(.dark) .themeform input[type="email"]:focus,
 body:where(.dark) .themeform input[type="url"]:focus,
 body:where(.dark) .themeform input[type="tel"]:focus,
-body:where(.dark) .themeform input[type="number"]:focus, 
+body:where(.dark) .themeform input[type="number"]:focus,
 body:where(.dark) .themeform select:focus,
 body:where(.dark) .themeform textarea:focus { border-color: rgba(255,255,255,0.25); color: rgba(255,255,255,0.7); }
 body:where(.dark) .themeform label .required { color: #fff; }
@@ -267,13 +268,13 @@ body:where(.dark) .nav-menu:not(.mobile) ul ul button { color: #333; }
 body:where(.dark) .nav-menu:not(.mobile) ul ul button.active { background: #eee; color: rgba(255,255,255,0.5); }
 body:where(.dark) .nav-menu:not(.mobile) ul ul button .svg-icon { fill: rgba(0,0,0,0.5); }
 
-body:where(.dark) .nav-menu:not(.mobile) li.current_page_item > span > a, 
-body:where(.dark) .nav-menu:not(.mobile) li.current-menu-item > span > a, 
-body:where(.dark) .nav-menu:not(.mobile) li.current-menu-ancestor > span > a, 
+body:where(.dark) .nav-menu:not(.mobile) li.current_page_item > span > a,
+body:where(.dark) .nav-menu:not(.mobile) li.current-menu-item > span > a,
+body:where(.dark) .nav-menu:not(.mobile) li.current-menu-ancestor > span > a,
 body:where(.dark) .nav-menu:not(.mobile) li.current-post-parent > span > a { color: #fff; }
-body:where(.dark) .nav-menu:not(.mobile) ul ul li.current_page_item > span > a, 
-body:where(.dark) .nav-menu:not(.mobile) ul ul li.current-menu-item > span > a, 
-body:where(.dark) .nav-menu:not(.mobile) ul ul li.current-menu-ancestor > span > a, 
+body:where(.dark) .nav-menu:not(.mobile) ul ul li.current_page_item > span > a,
+body:where(.dark) .nav-menu:not(.mobile) ul ul li.current-menu-item > span > a,
+body:where(.dark) .nav-menu:not(.mobile) ul ul li.current-menu-ancestor > span > a,
 body:where(.dark) .nav-menu:not(.mobile) ul ul li.current-post-parent > span > a { color: #777; }
 
 body:where(.dark) .nav-menu.mobile { background: rgba(0,0,0,0.1); }
